--- a/css/carousel.css
+++ b/css/carousel.css
@@ -45,6 +45,8 @@ body {
 /* Since positioning the image, we need to help out the caption */
 .carousel-caption {
   z-index: 10;
+  color: #D2B48C;
+  padding-bottom: 50px;
 }
 
 /* Declare heights because of positioning of img element */
